--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home":"https://vidyaMadugula.github.io/Portfolio",
+  "homepage":"https://vidyaMadugula.github.io/Portfolio",
   "name": "portfolio_v",
   "version": "0.1.0",
   "private": true,
